objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top200__c</fullName>
        <formula>PricebookEntry.Product2.Top200__c</formula>
        <label>Top200</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGOR_PAC__c</fullName>
        <formula>PricebookEntry.Product2.IGOR_PAC__c</formula>
        <label>IGOR_PAC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_INF__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSE_Trunk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CALP parts information</description>
        <label>FSE Trunk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EVAL_SAMPLE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EVAL SAMPLE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Discount__c</fullName>
        <label>CPQ Discount</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date_INF__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>PricebookEntry.Product2.product_line__c</formula>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Covered_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>create field for LST FSR product link</description>
        <label>Covered Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PromotionCode__c</fullName>
        <label>PromotionCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSS_Bid_Margin__c</fullName>
        <label>Margin</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT( PricebookEntry.Product2.Family )</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <formula>IF( PricebookEntry.Product2.IsActive=TRUE, &quot;ACTIVE&quot;, &quot;INACTIVE&quot;)</formula>
        <label>Product Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_INF__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_in_Months__c</fullName>
        <description>This a Formula field that calculates Term in full months from Start to End Date. 
15+ days are being considered as a 1 Month.</description>
        <formula>(((YEAR(End_Date_INF__c) - YEAR(Start_Date_INF__c ) - 1) *12) + (12 - MONTH(Start_Date_INF__c ) +1) + MONTH(End_Date_INF__c)- 1+ 

IF((DAY(End_Date_INF__c) - DAY(Start_Date_INF__c )&gt;15),1, 

IF((DAY(End_Date_INF__c) - DAY(Start_Date_INF__c )&lt;(-15)),-1, 



0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term (in Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_DAS_Products__c</fullName>
        <formula>OR (
Product_Line__c = &quot;APS&quot;, Product_Line__c = &quot;ARS&quot;, Product_Line__c = &quot;AWS&quot;, Product_Line__c = &quot;CLH&quot;, Product_Line__c = &quot;CLR&quot;, Product_Line__c = &quot;DIS&quot;, Product_Line__c = &quot;FAP&quot;, Product_Line__c = &quot;HCS&quot;, Product_Line__c = &quot;HTS&quot;, Product_Line__c = &quot;IAS&quot;, Product_Line__c = &quot;INV&quot;, Product_Line__c = &quot;LVI&quot;, Product_Line__c = &quot;MFT&quot;, Product_Line__c = &quot;MLD&quot;, Product_Line__c = &quot;MOL&quot;, Product_Line__c = &quot;MOX&quot;, Product_Line__c = &quot;NMO&quot;, Product_Line__c = &quot;NVS&quot;, Product_Line__c = &quot;PBR&quot;, Product_Line__c = &quot;PGI&quot;, Product_Line__c = &quot;QTS&quot;, Product_Line__c = &quot;RRD&quot;, Product_Line__c = &quot;RRS&quot;, Product_Line__c = &quot;SPS&quot;, Product_Line__c = &quot;TBR&quot;, Product_Line__c = &quot;TIS&quot;, Product_Line__c = &quot;TSC&quot;, Product_Line__c = &quot;EZR&quot;, Product_Line__c = &quot;AA&quot;, Product_Line__c = &quot;ICP&quot;, Product_Line__c = &quot;MAS&quot;, Product_Line__c = &quot;GC&quot;, Product_Line__c = &quot;LC&quot;, Product_Line__c = &quot;LCM&quot;, Product_Line__c = &quot;IR&quot;, Product_Line__c = &quot;UVS&quot;, Product_Line__c = &quot;TEA&quot;, Product_Line__c = &quot;MMS&quot;, Product_Line__c = &quot;MBA&quot;, Product_Line__c = &quot;RAM&quot;, Product_Line__c = &quot;PER&quot;, Product_Line__c = &quot;AMP&quot;, Product_Line__c = &quot;DAB&quot;, Product_Line__c = &quot;DAO&quot;, Product_Line__c = &quot;DLP&quot;, Product_Line__c = &quot;EXT&quot;, Product_Line__c = &quot;FNP&quot;, Product_Line__c = &quot;GMP&quot;, Product_Line__c = &quot;IMF&quot;, Product_Line__c = &quot;IMG&quot;, Product_Line__c = &quot;LMP&quot;, Product_Line__c = &quot;RVA&quot;, Product_Line__c = &quot;SKC&quot;, Product_Line__c = &quot;TXV&quot;, Product_Line__c = &quot;AM&quot;, Product_Line__c = &quot;LM&quot;, Product_Family__c=&quot;72-PER&quot;,Product_Line__c = &quot;DL&quot;,Product_Line__c =&quot;FN&quot;,Product_Line__c =&quot;FTF&quot;,Product_Line__c =&quot;GM&quot;,Product_Line__c =&quot;PIV&quot;,Product_Line__c =&quot;DCS&quot;,Product_Line__c =&quot;DLS&quot;,Product_Line__c =&quot;DSS&quot;,Product_Line__c =&quot;DEL&quot;,Product_Family__c==&quot;75-QPS&quot;,Product_Line__c=&quot;QPS&quot;,Product_Line__c=&quot;HCA&quot;,Product_Line__c =&quot;NEO&quot;,Product_Line__c =&quot;PRE&quot;,Product_Line__c =&quot;NPT&quot;,Product_Line__c =&quot;DIA&quot;,Product_Line__c =&quot;CHS&quot;,Product_Line__c =&quot;VIR&quot;,Product_Line__c =&quot;CCM&quot;,Product_Line__c =&quot;MSD&quot;,Product_Line__c =&quot;MDX&quot;,Product_Line__c =&quot;NAP&quot;,Product_Line__c =&quot;RHS&quot;,Product_Line__c =&quot;NEX&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is DAS Products?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_LST_Products__c</fullName>
        <description>REMOVE THIS FIELD - AFTER FORECAST SETTINGS PRODUCTION DEPLOYMENT</description>
        <formula>OR (
Product_Line__c = &quot;APS&quot;, Product_Line__c = &quot;ARS&quot;, Product_Line__c = &quot;AWS&quot;, Product_Line__c = &quot;CLH&quot;, Product_Line__c = &quot;CLR&quot;, Product_Line__c = &quot;DIS&quot;, Product_Line__c = &quot;FAP&quot;, Product_Line__c = &quot;HCS&quot;, Product_Line__c = &quot;HTS&quot;, Product_Line__c = &quot;IAS&quot;, Product_Line__c = &quot;INV&quot;, Product_Line__c = &quot;LVI&quot;, Product_Line__c = &quot;MFT&quot;, Product_Line__c = &quot;MLD&quot;, Product_Line__c = &quot;MOL&quot;, Product_Line__c = &quot;MOX&quot;, Product_Line__c = &quot;NMO&quot;, Product_Line__c = &quot;NVS&quot;, Product_Line__c = &quot;PBR&quot;, Product_Line__c = &quot;PGI&quot;, Product_Line__c = &quot;QTS&quot;, Product_Line__c = &quot;RRD&quot;, Product_Line__c = &quot;RRS&quot;, Product_Line__c = &quot;SPS&quot;, Product_Line__c = &quot;TBR&quot;, Product_Line__c = &quot;TIS&quot;, Product_Line__c = &quot;TSC&quot;,
Product_Line__c = &quot;EZR&quot;,Product_Line__c=&quot;HCA&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is LST Products?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Product__c</fullName>
        <label>Service Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ATT Attivio</fullName>
                </value>
                <value>
                    <fullName>AVC Analytics - Clinical</fullName>
                </value>
                <value>
                    <fullName>AVS Analytics - R&amp;D</fullName>
                </value>
                <value>
                    <fullName>DSK Desktop</fullName>
                </value>
                <value>
                    <fullName>ELM Elements</fullName>
                </value>
                <value>
                    <fullName>ENT Enterprise R&amp;D</fullName>
                </value>
                <value>
                    <fullName>ISS Imaging</fullName>
                </value>
                <value>
                    <fullName>QAS QA/QC</fullName>
                </value>
                <value>
                    <fullName>SIG Signals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Weightage__c</fullName>
        <formula>CASE(TEXT(Opportunity.StageName),&quot;Stage 4 - Objection Handling&quot;,  TotalPrice  *0.5,&quot;Stage 5 - Preferred&quot;,  TotalPrice  *0.80,&quot;Stage 6 - Negotiating/Forecast&quot;, TotalPrice *1,&quot;Closed Won&quot;, TotalPrice *1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Weightage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Name_INF__c</fullName>
        <description>Text field populated with product name by the workflow rule</description>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_RevRecCompare__c</fullName>
        <description>Compare Product date and Revenue recognization date</description>
        <formula>IF(ServiceDate = Opportunity_Revenue_Rec_Date__c,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsSameAsRevRecDate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_CPQ_Discount__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__TotalDiscountRate__c</formula>
        <label>CPQ Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Converted_To_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted To Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_OppProductID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Legacy OppProductID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opp_line_item_id_old__c</fullName>
        <description>Field to store the Salesforce ID of the Opp line item that was deleted as part of the removing Product duplicates. 
Product de duplication project 
Exp Date : 31-12-2015</description>
        <label>Opp line item id - old</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Renewal_Quote_Date__c</fullName>
        <label>CPQ Renewal Quote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricebook_entry_ID_old__c</fullName>
        <description>Field to store the related Pricebook entry Id that was deleted as part of removing Product duplicates. 
Product de duplication project 
Exp Date : 31-12-2015</description>
        <label>Pricebook entry ID old</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Falls_in_NPI_date_range__c</fullName>
        <formula>AND( (CreatedDate &gt;  PricebookEntry.Product2.NPI_Start_Date__c ),(CreatedDate &lt;  PricebookEntry.Product2.NPI_End_Date__c ))</formula>
        <label>Falls in NPI date range</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rep_Product_Line_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep Product Line Target</label>
        <referenceTo>Rep_Product_Line_Target__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQ_Renewal_Quote_Number__c</fullName>
        <label>CPQ Renewal Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bucket_Field_Product_Line__c</fullName>
        <formula>IF(OR( Product_Line__c =&apos;AVC&apos;,Product_Line__c =&apos;AVS&apos;,Product_Line__c =&apos;ELM&apos;,Product_Line__c =&apos;ISS&apos;,Product_Line__c =&apos;QAS&apos;,Product_Line__c =&apos;DSK&apos;,Product_Line__c =&apos;ENT&apos;,Product_Line__c =&apos;ATT&apos;),&apos;INF Product&apos;,
IF(OR(Product_Line__c =&apos;AGT&apos;,Product_Line__c =&apos;OMV&apos;,Product_Line__c =&apos;OSAI&apos;,Product_Line__c =&apos;OSC&apos;,Product_Line__c =&apos;OSAM&apos;,Product_Line__c =&apos;OSRL&apos;,Product_Line__c =&apos;OSSS&apos;,Product_Line__c =&apos;SVC&apos;,Product_Line__c =&apos;TMO&apos;,Product_Line__c =&apos;WAT&apos;),&apos;OneSource Product&apos;,
IF(OR ( 
Product_Line__c = &quot;APS&quot;, Product_Line__c = &quot;ARS&quot;, Product_Line__c = &quot;AWS&quot;, Product_Line__c = &quot;CLH&quot;, Product_Line__c = &quot;CLR&quot;, Product_Line__c = &quot;DIS&quot;, Product_Line__c = &quot;FAP&quot;, Product_Line__c = &quot;HCS&quot;, Product_Line__c = &quot;HTS&quot;, Product_Line__c = &quot;IAS&quot;, Product_Line__c = &quot;INV&quot;, Product_Line__c = &quot;LVI&quot;, Product_Line__c = &quot;MFT&quot;, Product_Line__c = &quot;MLD&quot;, Product_Line__c = &quot;MOL&quot;, Product_Line__c = &quot;MOX&quot;, Product_Line__c = &quot;NMO&quot;, Product_Line__c = &quot;NVS&quot;, Product_Line__c = &quot;PBR&quot;, Product_Line__c = &quot;PGI&quot;, Product_Line__c = &quot;QTS&quot;, Product_Line__c = &quot;RRD&quot;, Product_Line__c = &quot;RRS&quot;, Product_Line__c = &quot;SPS&quot;, Product_Line__c = &quot;TBR&quot;, Product_Line__c = &quot;TIS&quot;, Product_Line__c = &quot;TSC&quot;, 
Product_Line__c = &quot;EZR&quot; 
),&apos;LST&apos;,Product_Line__c)))</formula>
        <label>Bucket Field: Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Product_Line_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region Product Line Target</label>
        <referenceTo>Region_Product_Line_Target__c</referenceTo>
        <relationshipLabel>Opportunity Product (Region Product Line Target)</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LSS_Bid_CM_exception_reason__c</fullName>
        <inlineHelpText>Explain CM% below minimum</inlineHelpText>
        <label>CM% exception reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Revenue_Rec_Date__c</fullName>
        <description>REMOVE THIS FIELD - AFTER FORECAST SETTINGS PRODUCTION DEPLOYMENT</description>
        <formula>Opportunity.Revenue_Rec_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Revenue Rec Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region_Product_Line_Target_Leads__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region Product Line Target (Leads)</label>
        <referenceTo>Region_Product_Line_Target_Leads__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <validationRules>
        <fullName>INF_ProdStDt_lessThan_EndDate</fullName>
        <active>true</active>
        <description>End Date should not be greated than Start date</description>
        <errorConditionFormula>AND(End_Date_INF__c  &lt;   Start_Date_INF__c, Product2.Business_Unit__c == &apos;INF&apos; )</errorConditionFormula>
        <errorDisplayField>Start_Date_INF__c</errorDisplayField>
        <errorMessage>End Date must not be lesser than Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>INF_Start_and_End_date_mandatory</fullName>
        <active>false</active>
        <description>if Product name contains licenseStart Date and End Date is mandatory</description>
        <errorConditionFormula>AND(
	OR(
		ISBLANK(Start_Date_INF__c),
		ISBLANK( End_Date_INF__c)
	),
	OR(
		CONTAINS(PricebookEntry.Product2.Name,&apos;Subscription&apos;),CONTAINS(PricebookEntry.Product2.Name,&apos;Maintenance&apos;),CONTAINS(PricebookEntry.Product2.Name,&apos;Term&apos;)
	),
	Product2.Business_Unit__c == &apos;INF&apos; 
)</errorConditionFormula>
        <errorDisplayField>Covered_Asset__c</errorDisplayField>
        <errorMessage>Enter Start and End Date for subscription, maintenance and term products.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>INF_Start_date_Mandatory_for_Perpetual</fullName>
        <active>false</active>
        <description>Start date is mandatory for perpetual licenses</description>
        <errorConditionFormula>AND(
ISBLANK(Start_Date_INF__c),
CONTAINS(PricebookEntry.Product2.Name,&apos;Perpetual&apos;),
Product2.Business_Unit__c == &apos;INF&apos; 
)</errorConditionFormula>
        <errorMessage>Enter Start Date for perpetual products</errorMessage>
    </validationRules>
</CustomObject>